fix zoom bug on image gallery causing images to underlap upon zoom, using z-index styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,10 @@ button[type="submit"] {
   transform: scale(1.5); 
 }
 
+.pic:hover {
+    z-index:10;
+}
+
 /*-----------------------------------------Workshops - Cards */
 
 
